Fix background image not showing up

--- a/sass/sections/_global.scss
+++ b/sass/sections/_global.scss
@@ -9,7 +9,7 @@
 body {
     min-height: 100vh;
     width: 100%;
-    background: url(./../../images/woodbackground.jpg);
+    background: url("../images/woodbackground.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
